--- a/configs/discord_logger.ini
+++ b/configs/discord_logger.ini
@@ -58,6 +58,12 @@
 			"channel"	"public"
 			"tag"		""
 		}
+		"roundend_playersalive"
+		{
+			"enabled"	"1"
+			"channel"	"public"
+			"tag"		""
+		}
 	}
 	"webhooks"
 	{
