--- a/configs/discord_logger.ini
+++ b/configs/discord_logger.ini
@@ -7,6 +7,7 @@
 		"log_ip"		"1"
 		"log_steamid"	"1"
 		"log_country"	"1"
+		"log_ipconnect"	"1"
 		"embed"		"1"
 		"informations_timer"	"360.0"
 		
