+ Bots & SourceTV detection
Added a togglable options to allow or disallow bots and sourcetv to be able to log too

--- a/configs/discord_logger.ini
+++ b/configs/discord_logger.ini
@@ -5,6 +5,7 @@
 		"username"		"Sourcemod logger"
 		"title_link"	"https://sourcemod.net/"
 		"log_ip"		"1"
+		"log_fakeplayers"	"1"
 		"log_steamid"	"1"
 		"log_country"	"1"
 		"log_ipconnect"	"1"
